cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Solutions for AoC 2023

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             eyedevelop
maintainer:         me@eyedevelop.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: AoC2023.Exercise AoC2023.Day1.Part1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0, filepath ^>=1.4.2.2
    hs-source-dirs:   src
    default-language: Haskell2010
